src/ContosoTraders.Api.Products/Manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contoso-traders-products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contoso-traders-products
  template:
    metadata:
      labels:
        app: contoso-traders-products
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: contoso-traders-products
          #Note: The '{ENVIRONMENT}' token will be substituted with the value of the ENVIRONMENT github secret by github workflow..
          image: contosotradersacr{ENVIRONMENT}.azurecr.io/contosotradersapiproducts:latest
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
