src/ContosoTraders.Api.Products/Manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cator-contoso-traders-products
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: cator-contoso-traders-products
